--- a/src/styles/numpad.module.css
+++ b/src/styles/numpad.module.css
@@ -28,3 +28,7 @@
 .announcer {
   composes: nf-announcer from "./numpad.global.css";
 }
+
+.displayError {
+  composes: nf-display from "./numpad.global.css";
+}
